# sugarcane-disease-classification

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ANDROID_DEPLOYMENT_PLAN.md  Base-1.py  Base_backbones.py  DEPENDENCY_MANIFEST.md  DISEASE_PIPELINE_5_SPRINT_PRODUCTION_PLAN.md  Dockerfile.cpu  Dockerfile.gpu  EVOLUTION.md  LICENSE  PROJECT_OVERSEER_REPORT_DISEASE.md  PROJECT_SUMMARY.md  README.md  SETUP_AND_DEPENDENCIES.md  SPRINT1_COMPLETION_REPORT.md  SPRINT2_COMPLETION_REPORT.md  SPRINT_3_SEG_PLAN.md  disease_classifier_gui.py  docker-compose.yml  image_validator.py  pyproject.toml  pyrightconfig.json  reproduce_pipeline.py  requirements-ci.txt  requirements-dev.txt  requirements.txt  run_pipeline.py  setup_verify.py  sprint1_pyright_report.json  test_dependencies.py
.github/: ARCHITECTURE_AND_WORKFLOW.md  README.md  copilot-instructions.md
.github/workflows/: ci.yml  docker-build.yml  test-matrix.yml
BASE-BACK/src/: __init__.py  main.py
BASE-BACK/src/config/: __init__.py  settings.py
BASE-BACK/src/export/: __init__.py  export_engine.py  smoke_tests.py
BASE-BACK/src/models/: __init__.py  architectures.py  blocks.py
BASE-BACK/src/tests/: __init__.py  test_suite.py
BASE-BACK/src/training/: __init__.py  pipeline.py
BASE-BACK/src/utils/: __init__.py  checkpoint_manager.py  datasets.py  visualization.py
BASE-BACK/tests/: test_models.py
V2_segmentation/: __init__.py  config.py  run_pipeline_v2.py
V2_segmentation/analysis/: __init__.py  class_attention_maps.py  error_pattern_analysis.py  feature_analyzer.py  gradcam_generator.py  run_full_analysis.py
V2_segmentation/ensemble_v2/: __init__.py  ensemble_orchestrator.py  stage10_adversarial.py  stage11_referee.py  stage12_distillation_v2.py  stage1_individual_v2.py  stage2_to_7_rerun.py  stage4_feature_fusion_v2.py  stage5_mixture_experts_v2.py  stage6_meta_learner_v2.py  stage8_seg_informed.py  stage9_cascaded.py
V2_segmentation/evaluation/: __init__.py  audit_reporter.py  leakage_checker.py  oof_generator.py  overfit_detector.py
V2_segmentation/losses/: __init__.py  dice_loss.py  distillation_loss.py  focal_loss.py  joint_loss.py
V2_segmentation/models/: __init__.py  backbone_adapter.py  decoder.py  dual_head.py  model_factory.py
V2_segmentation/pseudo_labels/: __init__.py  class_sanity_checker.py  grabcut_generator.py  gradcam_mask_generator.py  iterative_refiner.py  mask_combiner.py  mask_quality_scorer.py  sam_generator.py  spot_check_ui.py
V2_segmentation/scripts/: generate_draft_gold_masks.py  sample_gold_set.py  smoke_dual_head.py  smoke_oof_dryrun.py  smoke_training_pipeline.py
V2_segmentation/training/: __init__.py  checkpoint_manager.py  memory_manager.py  metrics.py  train_all_backbones.py  train_v2_backbone.py
V2_segmentation/validation/: __init__.py  calibrate_gate.py  region_analyzer.py  seg_validator.py
V2_segmentation/visualization/: __init__.py  backbone_plots.py  ensemble_comparison.py  ensemble_stage_plots.py  heatmap_grid.py  seg_overlay.py  tier_distribution.py  training_curves.py  validation_demo.py
analytics_logs/: connection_log.jsonl
ensemble_system/: README.md  README_PLOTTING.md  __init__.py  ensemble_checkpoint_manager.py  ensemble_plots.py  pyrightconfig.json  run_15coin_pipeline.py  stage1_individual.py  stage2_score_ensembles.py  stage3_stacking.py  stage4_feature_fusion.py  stage5_mixture_experts.py  stage6_meta_ensemble.py  stage7_distillation.py  test_imports.py  test_pipeline.py  validate_pipeline.py  verify_plotting.py
ensemble_system/configs/: ensemble_config.yaml
feedback_logs/: feedback_log.jsonl
inference_server/: __init__.py  app.py  config.py  schemas.py
inference_server/engine/: __init__.py  loader.py  multi_loader.py  multi_predictor.py  predictor.py  validation.py
inference_server/routes/: __init__.py  analytics.py  feedback.py  health.py  inference.py  models.py
scripts/: CHECKPOINT_RECOVERY_GUIDE.md  EXECUTION_GUIDE.md  MODULARIZATION_SUMMARY.md  PHASE_1_COMPLETE.md
tests/: __init__.py  conftest.py  test_export_formats.py  test_forward_pass.py  test_imports.py  test_model_creation.py
